# unfollow-unfollowers

./: .gitignore  Cargo.toml  Makefile  README.md  pyproject.toml
src/: cli.rs  close_friends.rs  export.rs  formatting.rs  lib.rs  lists.rs  mutate.rs  non_followers.rs  pending_requests.rs  test_support.rs  unfollow.rs
tests/: conftest.py  factories.py  test_close_friends.py  test_export.py  test_formatting.py  test_lists.py  test_mutate.py  test_non_followers.py  test_pending_requests.py  test_unfollow.py
unfollow_unfollowers/: cli.py  close_friends.py  export.py  formatting.py  lists.py  mutate.py  non_followers.py  pending_requests.py  unfollow.py
