[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "unfollow-unfollowers"
version = "0.1.0"
description = "Find Instagram accounts that don't follow you back, from your own data export"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["ruff", "pytest"]

[tool.setuptools]
packages = ["unfollow_unfollowers"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
